--- a/templates/base.html
+++ b/templates/base.html
@@ -6,33 +6,40 @@
     <meta content="Local Area Network Search Engine.
     Great for searching files shared by your coworkers." name="description">
     <title>LAN Search</title>
-    <link href="/static/css/style.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
-<body>
+<body class='container'>
 <header id="header">
-    <div class="container">
-        <h1 class="logo">
-            <a href="/">LAN Search</a>
-        </h1>
-    </div>
+    <h1 class="logo">
+        <i class="icon glyphicon glyphicon-search"></i>
+        <a href="/">LAN Search</a>
+    </h1>
 </header>
+
+<form action="/search" method="get">
+    <div class="form-group">
+        <input type="text" class="form-control searchbox" name="q"
+               placeholder="Search" value="{{ query_text }}">
+    </div>
+    <!--input type="submit" class="btn btn-default searchbutton"-->
+</form>
 
 {% block content %}
 {% endblock %}
 
-<footer id="footer">
-    <ul class="nav">
-        <li>
-            <a href="https://github.com/yadongwen">Github</a>
-        </li>
-        <li>
-            <a href="mailto:yawen@microstrategy.com">Contact</a>
-        </li>
-    </ul>
+<footer>
+    <hr>
+    <div class="col-lg-12 col-sm-12 col-12 row" id="copy">
+        <span class="col-md-3"></span>
+        <span class="col-md-2">© 2014 Ralph Wen</span>
+        <span class="col-md-2"><a href="https://github.com/yadongwen">Github</a></span>
+        <span class="col-md-2"><a href="mailto:yawen@microstrategy.com">Contact</a></span>
+        <span class="col-md-3"></span>
+    </div>
 </footer>
 
 <script src="/static/javascript/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="/static/javascript/lansearch.js" type="text/javascript"></script>
-
 </body>
 </html>
