--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,12 @@
     <meta content="Local Area Network Search Engine.
     Great for searching files shared by your coworkers." name="description">
     <title>LAN Search</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
 </head>
 <body class='container'>
 <header id="header">
     <h1 class="logo">
-        <i class="icon glyphicon glyphicon-search"></i>
         <a href="/">LAN Search</a>
     </h1>
 </header>
@@ -22,24 +21,15 @@
         <div class="col-lg-12">
             <div class="input-group">
                 <div class="input-group-btn">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Normal Search<span
-                            class="caret"></span></button>
-                    <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                        <li><a href="#">Normal Search</a></li>
-                        <li><a href="#">Wildcard Search</a></li>
-                        <li><a href="#">Regex Search</a></li>
-                    </ul>
+                    <button type="button" class="btn btn-info selected" onclick="select()">Keyword</button>
+                    <button type="button" class="btn btn-default" onclick="select()">Wildcard</button>
+                    <button type="button" class="btn btn-default" onclick="select()">Regex</button>
                 </div>
                 <input type="text" class="form-control searchbox" name="q"
                        placeholder="Search" value="{{ query_text }}">
-                <!-- /btn-group -->
             </div>
-            <!-- /input-group -->
         </div>
-        <!-- /.col-lg-6 -->
     </div>
-    <!-- /.row -->
-    <!--input type="submit" class="btn btn-default searchbutton"-->
 </form>
 
 {% block content %}
@@ -48,16 +38,13 @@
 <footer>
     <hr>
     <div class="col-lg-12 col-sm-12 col-12 row" id="copy">
-        <span class="col-md-3"></span>
+        <span class="col-md-10"></span>
         <span class="col-md-2">© 2014 Ralph Wen</span>
-        <span class="col-md-2"><a href="https://github.com/yadongwen">Github</a></span>
-        <span class="col-md-2"><a href="mailto:yawen@microstrategy.com">Contact</a></span>
-        <span class="col-md-3"></span>
-    </div>
+        </div>
 </footer>
 
 <script src="/static/javascript/jquery-1.11.1.min.js" type="text/javascript"></script>
-<script src="//getbootstrap.com/dist/js/bootstrap.min.js"></script>
+<script src="/static/javascript/bootstrap.min.js"></script>
 <script src="/static/javascript/lansearch.js" type="text/javascript"></script>
 </body>
 </html>
