--- a/templates/search.html
+++ b/templates/search.html
@@ -3,8 +3,9 @@
 {% block content %}
 <div id='content'>
     <div id='results'>
-        <div id='stats'>
-            Found {{ total_result_count }} results in {{ query_time }} seconds
+        <div id='row'>
+            <p></p>
+            <p>Found {{ total_result_count }} results in {{ query_time }} seconds</p>
         </div>
         <table class="table table-hover">
             <thead>
