jquery to change style of searchtype

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,9 +21,9 @@
         <div class="col-lg-12">
             <div class="input-group">
                 <div class="input-group-btn">
-                    <button type="button" class="btn btn-info selected" onclick="select()">Keyword</button>
-                    <button type="button" class="btn btn-default" onclick="select()">Wildcard</button>
-                    <button type="button" class="btn btn-default" onclick="select()">Regex</button>
+                    <button type="button" class="searchtype btn btn-info selected" onclick="select()">Keyword</button>
+                    <button type="button" class="searchtype btn btn-default" onclick="select()">Wildcard</button>
+                    <button type="button" class="searchtype btn btn-default" onclick="select()">Regex</button>
                 </div>
                 <input type="text" class="form-control searchbox" name="q"
                        placeholder="Search" value="{{ query_text }}">
