--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,14 @@
     <title>LAN Search</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
+    <style>
+        .disabled{
+        /*Disabled link style*/
+        color: black;
+        pointer-events: none;
+        cursor: default;
+        }
+    </style>
 </head>
 <body class='container'>
 <header id="header">
@@ -51,6 +59,7 @@
 
 <script src="/static/javascript/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="/static/javascript/bootstrap.min.js"></script>
+<script src="/static/javascript/ZeroClipboard.min.js"></script>
 <script src="/static/javascript/lansearch.js" type="text/javascript"></script>
 </body>
 </html>
