--- a/templates/search.html
+++ b/templates/search.html
@@ -5,6 +5,7 @@
     <div id='results'>
         <div id='row'>
             <p></p>
+
             <p>Found {{ total_result_count }} results in {{ query_time }} seconds</p>
         </div>
         <table class="table table-hover">
@@ -22,24 +23,52 @@
             <tr>
                 <td>{{ result.machine }}</td>
                 <td>{{ result.path }}</td>
-                <td><a href='{{ result.link }}' target='_blank'>{{ result.name }}</a></td>
+                <td>{{ result.name }}</td>
                 <td>{{ result.size }}</td>
                 <td>{{ result.mtime }}</td>
+                <td>
+                    <button class="copy-button" data-clipboard-text="aaa">Copy Path</button>
+                </td>
+                <td>
+                    <button>Copy Path with File Name</button>
+                </td>
             </tr>
             </tbody>
             {% endfor %}
+
         </table>
-        <div id='paginate'>
+
+        <ul class="pagination">
+            {% if current_page == 1 %}
+            <li class="disabled">
+                <a href="#">&laquo;</a>
+            </li>
+            {% else %}
+            <li>
+                <a href="/search?q={{ query_text }}&amp;p={{ current_page-1 }}&amp;t={{ query_type }}">&laquo;</a>
+            </li>
+            {% endif %}
             {% for page in pages %}
-            <span>
-                {% if page == current_page or page == '..' %}
-                {{ page }}
-                {% else %}
-                <a href="/search?q={{ query_text }}&amp;p={{ page }}">{{ page }}</a>
-                {% endif %}
-            </span>
+            {% if page == current_page or page == '..' %}
+            <li class="disabled">
+                <a href="">{{ page }}</a>
+            </li>
+            {% else %}
+            <li>
+                <a href="/search?q={{ query_text }}&amp;p={{ page }}&amp;t={{ query_type }}">{{ page }}</a>
+            </li>
+            {% endif %}
             {% endfor %}
-        </div>
+            {% if current_page == pages[-1] %}
+            <li class="disabled">
+                <a href="#">&raquo;</a>
+            </li>
+            {% else %}
+            <li>
+                <a href="/search?q={{ query_text }}&amp;p={{ current_page+1 }}&amp;t={{ query_type }}">&raquo;</a>
+            </li>
+            {% endif %}
+        </ul>
     </div>
 </div>
 {% endblock %}
