--- a/templates/base.html
+++ b/templates/base.html
@@ -15,47 +15,26 @@
         pointer-events:none;
         cursor:default;
         }
+        .name {
+        padding-top: 40px;
+        text-align: center;
+        padding-bottom: 20px;
+        font-family: museo-slab, Georgia, "Times New Roman", Times, serif;
+        font-weight: 500;
+        font-size: 60px;
+        text-shadow: 4px 3px 0px rgba(0, 0, 0, 0.15);
+        }
     </style>
 </head>
 <body class='container'>
 <header id="header">
-    <h1 class="logo">
+    <h1 class="name">
         <a href="/">LAN Search</a>
     </h1>
 </header>
 
-<form action="/search" method="get">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="input-group">
-                <div class="input-group-btn">
-                    <button type="button" class="searchtype btn btn-default"
-                            id="match" onclick="search()">Match
-                    </button>
-                    <button type="button" class="searchtype btn btn-default"
-                            id="wildcard" onclick="search()">Wildcard
-                    </button>
-                    <button type="button" class="searchtype btn btn-default"
-                            id="regexp" onclick="search()">Regexp
-                    </button>
-                </div>
-                <input type="text" class="form-control searchbox" name="q"
-                       placeholder="Search" value="{{ query_text }}">
-            </div>
-        </div>
-    </div>
-</form>
-
 {% block content %}
 {% endblock %}
-
-<footer>
-    <hr>
-    <div class="col-lg-12 col-sm-12 col-12 row" id="copy">
-        <span class="col-md-9"></span>
-        <span class="col-md-2">© 2014 Ralph Wen</span>
-    </div>
-</footer>
 
 <script src="/static/javascript/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="/static/javascript/bootstrap.min.js"></script>
