--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,23 +8,7 @@
     <title>LAN Search</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
-    <style>
-        .disabled{
-        /*Disabled link style*/
-        color:black;
-        pointer-events:none;
-        cursor:default;
-        }
-        .name {
-        padding-top: 40px;
-        text-align: center;
-        padding-bottom: 20px;
-        font-family: museo-slab, Georgia, "Times New Roman", Times, serif;
-        font-weight: 500;
-        font-size: 60px;
-        text-shadow: 4px 3px 0px rgba(0, 0, 0, 0.15);
-        }
-    </style>
+    <link href="/static/css/lan-search.css" rel="stylesheet">
 </head>
 <body class='container'>
 <header id="header">
@@ -36,6 +20,7 @@
 {% block content %}
 {% endblock %}
 
+<script src="/static/javascript/angular-1.3.1.min.js" type="text/javascript"></script>
 <script src="/static/javascript/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="/static/javascript/bootstrap.min.js"></script>
 <script src="/static/javascript/ZeroClipboard.min.js"></script>
