--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-hello
+
+<div ng-controller="getDomainCtrl">
+    [[hello]]
+</div>
+
 {% endblock %}
