--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
     <meta charset="utf-8">
     <meta content="lan,search,windows shared files,local area network,intranet" name="keywords">
@@ -20,10 +20,11 @@
 {% block content %}
 {% endblock %}
 
-<script src="/static/javascript/angular-1.3.1.min.js" type="text/javascript"></script>
+<script src="/static/javascript/angular.js" type="text/javascript"></script>
 <script src="/static/javascript/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="/static/javascript/bootstrap.min.js"></script>
 <script src="/static/javascript/ZeroClipboard.min.js"></script>
 <script src="/static/javascript/lan-search.js" type="text/javascript"></script>
+
 </body>
 </html>
