--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -10,24 +10,25 @@
                    placeholder="Domain Name" ng-model="domain">
         </div>
         <div class="form-group">
-            <p class="form-control-static">get current or type a domain to use</p>
+            <p class="form-control-static">or input domain name</p>
         </div>
     </form>
     <hr>
     <form class="form-inline" role="form">
-        <button type="submit" class="btn btn-primary">Get Machine List</button>
+        <button type="submit" class="btn btn-primary" ng-click="getMachineList()">Get Machine List</button>
     </form>
+    <p></p>
     <table class="table">
         <tr>
             <th>Machine Name</th>
             <th>Discovered Time</th>
             <th></th>
         </tr>
-        <tr>
-            <td>chn-yawes</td>
-            <td>1231324</td>
+        <tr ng-repeat="machine in machineList">
+            <td>[[machine.name]]</td>
+            <td>[[machine.discovered_time]]</td>
             <td>
-                <button type="submit" class="btn btn-primary">Get Shared Folders</button>
+                <button type="submit" class="btn btn-xs btn-primary">Get Shared Folders</button>
             </td>
         </tr>
     </table>
