--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -4,14 +4,14 @@
 
 <div ng-controller="getDomainCtrl">
     <form class="form-inline" role="form">
-        <button type="submit" class="btn btn-primary" ng-click="getCurrentDomain()">Get Current Domain</button>
+        <div class="form-group">
+            <p class="form-control-static">Domain: </p>
+        </div>
         <div class="form-group">
             <input type="text" class="form-control" id="inputPassword2"
-                   placeholder="Domain Name" ng-model="domain">
+                   placeholder="domain" ng-model="domain">
         </div>
-        <div class="form-group">
-            <p class="form-control-static">or input domain name</p>
-        </div>
+        <button type="submit" class="btn btn-primary" ng-click="getCurrentDomain()">Use Current Domain</button>
     </form>
     <hr>
     <form class="form-inline" role="form">
