add filtering UI to machine list

--- a/app/static/css/lan-search.css
+++ b/app/static/css/lan-search.css
@@ -18,3 +18,19 @@
 .name a {
     text-decoration: none;
 }
+
+.scrollContainer {
+    position: relative;
+    height: 600px;
+    width: 100%;
+}
+
+.innerScroll {
+    position: absolute;
+    overflow-y: auto;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    height: 100%;
+}
