--- a/app/static/css/lan-search.css
+++ b/app/static/css/lan-search.css
@@ -21,7 +21,9 @@
 
 .scrollContainer {
     position: relative;
-    height: 600px;
+    height: auto;
+    min-height: 300px;
+    max-height: 600px;
     width: 100%;
 }
 
