--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -6,17 +6,17 @@
             <div class="col-lg-12">
                 <div class="input-group">
                     <div class="input-group-btn">
-                        <button type="button" class="searchtype btn btn-default"
+                        <button type="button" class="search-type btn btn-default"
                                 id="match" onclick="search()">Match
                         </button>
-                        <button type="button" class="searchtype btn btn-default"
+                        <button type="button" class="search-type btn btn-default"
                                 id="wildcard" onclick="search()">Wildcard
                         </button>
-                        <button type="button" class="searchtype btn btn-default"
+                        <button type="button" class="search-type btn btn-default"
                                 id="regexp" onclick="search()">Regexp
                         </button>
                     </div>
-                    <input type="text" class="form-control searchbox" name="q"
+                    <input type="text" class="form-control search-box" name="q"
                            placeholder="Search" value="{{ query_text }}">
                 </div>
             </div>
