--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,8 +20,12 @@
 {% block content %}
 {% endblock %}
 
-<script src="/static/javascript/angular.js" type="text/javascript"></script>
+<span us-spinner spinner-key="spinner-1"></span>
+
 <script src="/static/javascript/jquery-1.11.1.min.js" type="text/javascript"></script>
+<script src="/static/javascript/angular.js" type="text/javascript"></script>
+<script src="/static/javascript/spin.js"></script>
+<script src="/static/javascript/angular-spinner.js"></script>
 <script src="/static/javascript/bootstrap.min.js"></script>
 <script src="/static/javascript/ZeroClipboard.min.js"></script>
 <script src="/static/javascript/lan-search.js" type="text/javascript"></script>
