--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,8 +6,7 @@
     <meta content="Local Area Network Search Engine.
     Great for searching files shared by your coworkers." name="description">
     <title>LAN Search</title>
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="/static/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="/static/css/lan-search.css" rel="stylesheet">
 </head>
 <body class='container'>
@@ -22,12 +21,12 @@
 
 <span us-spinner spinner-key="spinner-1"></span>
 
-<script src="/static/javascript/jquery-1.11.1.min.js" type="text/javascript"></script>
-<script src="/static/javascript/angular.js" type="text/javascript"></script>
-<script src="/static/javascript/spin.js"></script>
-<script src="/static/javascript/angular-spinner.js"></script>
-<script src="/static/javascript/bootstrap.min.js"></script>
-<script src="/static/javascript/ZeroClipboard.min.js"></script>
+<script src="/static/bower_components/jquery/dist/jquery.js" type="text/javascript"></script>
+<script src="/static/bower_components/angular/angular.js" type="text/javascript"></script>
+<script src="/static/bower_components/spin.js/spin.js" type="text/javascript"></script>
+<script src="/static/bower_components/angular-spinner/angular-spinner.js" type="text/javascript"></script>
+<script src="/static/bower_components/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
+<script src="/static/bower_components/zeroclipboard/dist/ZeroClipboard.js" type="text/javascript"></script>
 <script src="/static/javascript/lan-search.js" type="text/javascript"></script>
 
 </body>
