fix bug in copy buttons and rename files

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     Great for searching files shared by your coworkers." name="description">
     <title>LAN Search</title>
     <link href="/static/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="/static/css/lan-search.css" rel="stylesheet">
+    <link href="/static/css/app.css" rel="stylesheet">
 </head>
 <body class='container'>
 <header id="header">
@@ -21,13 +21,23 @@
 
 <span us-spinner spinner-key="spinner-1"></span>
 
+<footer>
+    <div class="col-lg-12 col-sm-12 col-12 row" id="copy">
+        <span class="col-md-7"></span>
+        <span class="col-md-1">
+            <a href="/admin">Admin</a>
+        </span>
+        <span class="col-md-2">© 2014 Ralph Wen</span>
+    </div>
+</footer>
+
 <script src="/static/bower_components/jquery/dist/jquery.js" type="text/javascript"></script>
 <script src="/static/bower_components/angular/angular.js" type="text/javascript"></script>
 <script src="/static/bower_components/spin.js/spin.js" type="text/javascript"></script>
 <script src="/static/bower_components/angular-spinner/angular-spinner.js" type="text/javascript"></script>
 <script src="/static/bower_components/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
 <script src="/static/bower_components/zeroclipboard/dist/ZeroClipboard.js" type="text/javascript"></script>
-<script src="/static/javascript/lan-search.js" type="text/javascript"></script>
+<script src="/static/javascript/app.js" type="text/javascript"></script>
 
 </body>
 </html>
