--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -31,7 +31,7 @@
 
                 <p>Found [[searchResult.hits.total]] results in [[searchResult.took/1000]] seconds</p>
             </div>
-            <table class="table table-hover">
+            <table class="table table-hover" result-table>
                 <thead>
                 <tr>
                     <th>Machine</th>
@@ -98,12 +98,6 @@
         </div>
     </div>
 
-    <footer>
-        <hr>
-        <div class="col-lg-12 col-sm-12 col-12 row" id="copy">
-            <span class="col-md-9"></span>
-            <span class="col-md-2">© 2014 Ralph Wen</span>
-        </div>
-    </footer>
+
 </div>
 {% endblock %}
