add functional ng based pagination

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
     Great for searching files shared by your coworkers." name="description">
     <title>LAN Search</title>
     <link href="/static/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet">
     <link href="/static/css/app.css" rel="stylesheet">
 </head>
 <body class='container'>
